docs/versioned_docs/version-0.7.0/api/mellea/stdlib/components/chat.mdx
---
title: "mellea.stdlib.components.chat"
sidebar_label: "mellea.stdlib.components.chat"
description: "Chat primitives: the `Message` and `ToolMessage` components."
---

Chat primitives: the `Message` and `ToolMessage` components.





Defines `Message`, the [`Component`](../../core/base#class-component) subtype used to represent a single turn in a
chat history with a `role` (`user`, `assistant`, `system`, or `tool`),
text `content`, and optional `images` and `documents` attachments. Also provides
`ToolMessage` (a `Message` subclass that carries the tool name and arguments), and
utilities for converting a [`Context`](../../core/base#class-context) into a flat list of `Message` objects:
`as_chat_history` (strict typing) and `as_generic_chat_history` (flexible with
configurable formatter).


## Functions

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `as_chat_history` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/chat.py#L206" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#as_chat_history}

```python
as_chat_history(ctx: Context) -> list[Message]
```


Returns a list of Messages corresponding to a Context.

**Args:**
- `ctx`: A linear [`Context`](../../core/base#class-context) whose entries are `Message` or [`ModelOutputThunk`](../../core/base#class-modeloutputthunk)
objects with `Message` parsed representations.

**Returns:**
- List of `Message` objects in conversation order.

**Raises:**
- `ValueError`: If the context history is non-linear and cannot be cast to a
flat list.
- `AssertionError`: If any entry in the context cannot be converted to a
`Message`.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `as_generic_chat_history` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/chat.py#L257" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#as_generic_chat_history}

```python
as_generic_chat_history(ctx: Context, formatter: Callable[[object], str] | None = None) -> list[Message]
```


Returns a list of Messages corresponding to a Context, with flexible type handling.

This function is more permissive than `as_chat_history()`, allowing arbitrary
component types. Unknown types are converted to strings using a configurable
formatter, making it suitable for general-purpose use where context composition
may be heterogeneous.

The formatter is applied to:
- [`ModelOutputThunk`](../../core/base#class-modeloutputthunk) with non-Message `parsed_repr`
- [`CBlock`](../../core/base#class-cblock) subclasses (subclasses only; plain [`CBlock`](../../core/base#class-cblock) is stringified)
- Other unknown component types

Existing `Message` objects are preserved as-is; their content is not formatted.
This design preserves Message fidelity while providing an escape hatch for unknown types.

**Args:**
- `ctx`: A linear [`Context`](../../core/base#class-context) that may contain `Message`, [`ModelOutputThunk`](../../core/base#class-modeloutputthunk),
or other [`Component`](../../core/base#class-component) types.
- `formatter`: Optional callable that converts unknown types to strings.
Defaults to `_default_formatter` which logs a warning and stringifies.

**Returns:**
- List of `Message` objects in conversation order.

**Raises:**
- `ValueError`: If the context history is non-linear and cannot be cast to a
flat list.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

## Classes

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `Message` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/chat.py#L31" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-message}


A single Message in a Chat history.

**Args:**
- `role`: The role that this message came from (e.g., `"user"`,
`"assistant"`).
- `content`: The content of the message.
- `images`: Optional images
associated with the message. Use [`ImageBlock`](../../core/base#class-imageblock) for base64-encoded
images (supported by all vision backends) or [`ImageUrlBlock`](../../core/base#class-imageurlblock) for
URL-referenced images (supported by OpenAI-compatible backends only;
backends that require base64 will raise a `ValueError`).
- `documents`: Optional documents associated with
the message.

**Attributes:**
- `Role`: Type alias for the allowed role literals\: `"system"`,
`"user"`, `"assistant"`, or `"tool"`.



<div className="h-8" />
**Methods:**

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `images` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/chat.py#L73" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#images}

```python
images(self) -> None | list[ImageBlock | ImageUrlBlock]
```

Returns the images associated with this message.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `parts` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/chat.py#L77" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#parts}

```python
parts(self) -> list[Component | CBlock | ModelOutputThunk]
```

Return the constituent parts of this message, including content, documents, and images.

**Returns:**
- list\[Component | CBlock | ModelOutputThunk]: A list beginning with the content block,
- followed by any attached documents and image blocks.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `format_for_llm` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/chat.py#L91" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#format_for_llm}

```python
format_for_llm(self) -> TemplateRepresentation
```

Formats the content for a Language Model.

**Returns:**
- The formatted output suitable for language models.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `ToolMessage` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/chat.py#L168" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-toolmessage}


Adds the name field for function name.

**Args:**
- `role`: The role of this message; most backends use `"tool"`.
- `content`: The content of the message; should be a stringified
version of `tool_output`.
- `tool_output`: The output of the tool or function call.
- `name`: The name of the tool or function that was called.
- `args`: The arguments passed to the tool.
- `tool`: The [`ModelToolCall`](../../core/base#class-modeltoolcall) representation.

**Attributes:**
- `arguments`: The arguments that were passed to the
tool; stored from the `args` constructor parameter.

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />
